<resources>
    <string name="app_name">Journey Sharing</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="booking_history">Booking History</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_string">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="destination_hint">Where today?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="logo">Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="others">I do not wish to specify</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home_address">Home Address(Optional)</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="cancel">cancel</string>
    <string name="send_email">Send Email</string>
    <string name="emergency_contact_optional">Emergency Contact (Optional)</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="empty_error">This field cannot be empty!</string>
    <string name="book_journey">Book Journey</string>
    <string name="to">To</string>
    <string name="preferences">Preferences</string>
    <string name="from">From</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="all">All</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="modes_of_transport">Modes of Transport</string>
    <string name="maximum_number_of_passengers">Maximum Number of Passengers</string>
    <string name="preferred_gender">Preferred Gender</string>
    <string name="distance_to_starting_point">Distance to Starting Point</string>
    <string name="book">Book</string>

</resources>
